--- a/src/vstboard/views/splash.ui
+++ b/src/vstboard/views/splash.ui
@@ -13,6 +13,9 @@
     <height>147</height>
    </rect>
   </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>0</number>
