--- a/src/vstboard/views/vstshellselect.ui
+++ b/src/vstboard/views/vstshellselect.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>VstShell</string>
   </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="margin">
     <number>0</number>
