use index in connectables
Signed-off-by: CtrlBrk <ctrlbrk76@gmail.com>

--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -14,7 +14,7 @@
         <file>img16x16/viewmag+.png</file>
         <file>img16x16/viewmagfit.png</file>
         <file>img16x16/documentinfo.png</file>
-        <file>img16x16/messagebox_critical.png</file>
         <file>img32x32/agt_action_fail.png</file>
+        <file>img16x16/delete.png</file>
     </qresource>
 </RCC>
