--- a/src/vstboard/mainwindow.ui
+++ b/src/vstboard/mainwindow.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>VstBoard</string>
   </property>
+  <property name="locale">
+   <locale language="English" country="UnitedStates"/>
+  </property>
   <property name="dockNestingEnabled">
    <bool>true</bool>
   </property>
@@ -130,6 +133,9 @@
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+          <property name="whatsThis">
+           <string>The Host panel is where you normally put your audio and midi interfaces.</string>
           </property>
           <property name="frameShape">
            <enum>QFrame::NoFrame</enum>
