license text update
Signed-off-by: CtrlBrk <ctrlbrk76@gmail.com>

--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -15,5 +15,7 @@
         <file>img16x16/documentinfo.png</file>
         <file>img32x32/agt_action_fail.png</file>
         <file>img16x16/delete.png</file>
+        <file>vst.png</file>
+        <file>asio.png</file>
     </qresource>
 </RCC>
