containers identified by id
Signed-off-by: CtrlBrk <ctrlbrk76@gmail.com>

--- a/src/vstboard/mainwindow.ui
+++ b/src/vstboard/mainwindow.ui
@@ -44,6 +44,9 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="frameShape">
+       <enum>QFrame::NoFrame</enum>
+      </property>
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
